k8s/0-init/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: gateway-pod
  labels:
    app: shoppingdemo
    type: spring-boot
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: joshiste/gateway:sio-bcn
          imagePullPolicy: Never
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: gateway
