k8s/0-init/hot-deals-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: hotdeals-pod
  labels:
    app: shoppingdemo
    type: spring-boot
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hotdeals
    spec:
      containers:
        - image: joshiste/hot-deals:sio-bcn
          imagePullPolicy: Never
          name: hotdeals
          ports:
            - containerPort: 8083
          resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: hotdeals
