k8s/0-init/toys-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shoppingdemo
  name: toys-pod
  labels:
    app: shoppingdemo
    type: spring-boot
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: toys
    spec:
      containers:
        - image: joshiste/bestseller-toys:sio-bcn
          imagePullPolicy: Never
          name: toys
          ports:
            - containerPort: 8081
          resources: {}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 5
      restartPolicy: Always
  selector:
    matchLabels:
      app: toys
