k8s/0-init/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: gateway-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: gateway
