k8s/0-init/fashion-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: fashion-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8082
      targetPort: 8082
  selector:
    app: fashion
