k8s/0-init/toys-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shoppingdemo
  name: toys-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8081
      targetPort: 8081
  selector:
    app: toys
