k8s/0-init/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: shoppingdemo
spec:
  rules:
    - host: gateway.workshop.demo
      #- host: gateway-HOSTPATTERN.chaos.codecentric.io
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-service
              servicePort: 8080
