k8s/0-init/fashion-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fashion-ingress
  namespace: shoppingdemo
spec:
  rules:
    - host: fashion.workshop.demo
      #- host: fashion-HOSTPATTERN.chaos.codecentric.io
      http:
        paths:
          - path: /
            backend:
              serviceName: fashion-service
              servicePort: 8082
