k8s/0-init/hot-deals-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hotdeals-ingress
  namespace: shoppingdemo
spec:
  rules:
    - host: hotdeals.workshop.demo
      #- host: hotdeals-HOSTPATTERN.chaos.codecentric.io
      http:
        paths:
          - path: /
            backend:
              serviceName: hotdeals-service
              servicePort: 8083
