k8s/0-init/toys-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toys-ingress
  namespace: shoppingdemo
spec:
  rules:
    - host: toys.workshop.demo
      #- host: toys-HOSTPATTERN.chaos.codecentric.io
      http:
        paths:
          - path: /
            backend:
              serviceName: toys-service
              servicePort: 8081
